Fixed z-index bug of collapsable navigation

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -160,7 +160,7 @@ button.btn.btn-default:hover {
   width: 100%;
 }
 
-.navbar, {
+.navbar {
   z-index: 9999;
 }
 
